# ModBusTestSrv

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Makefile  README.md  Version.h  Version.h.in  version_info.txt
.github/: dependabot.yml
.github/workflows/: cmake-single-platform.yml  dependabot.yml
cmake/: AutoVersion.cmake  Exclusions.cmake  IncreaseMinor.cmake
scripts/: README.md  example.json  generator.py
src/: DataBucket.hpp  DumbMlib.cxx  DumbModbus.hpp  DumbMsrv.cxx  README.md  main.cxx
test/: CMakeLists.txt  DumbMTest.cxx  test1.cxx
